cabal-version:       2.4
name:                fc-crypto
version:             0.0.0.0
synopsis:            Solver for the Forgotten Circles cryptogram
description:         Solver for the Forgotten Circles cryptogram
license:             MIT
license-file:        LICENSE
author:              Jason Whittle
maintainer:          Jason Whittle <jason.whittle@gmail.com>
copyright:           2022 Jason Whittle
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , rio
                     , array
                     , attoparsec
                     , diagrams-lib
                     , diagrams-svg
                     , lens

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  exposed-modules:     FcCrypto
                       FcCrypto.Glyph
                       FcCrypto.Glyph.Diagram
                       FcCrypto.Glyph.Known
                       FcCrypto.Glyph.Parser

executable fc-crypto
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       fc-crypto
                     , split
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite fc-crypto-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Driver.hs
  build-depends:       fc-crypto
                     , tasty
                     , tasty-discover
                     , tasty-hunit
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wno-missing-export-lists
  other-modules:       FcCrypto.Glyph.ParserTest
